# act-http-bridge

./: .copier-answers.yml  Cargo.toml  act.toml  build.rs  justfile
.github/workflows/: ci.yml
e2e/: info.hurl  list_tools.hurl  no_metadata.hurl  proxy.hurl  run.sh  upstream_call.hurl  upstream_tools.hurl
skill/: SKILL.md
src/: act_client.rs  lib.rs  mapping.rs
