[package]
name = "act-http-bridge"
description = "Proxies a remote ACT-HTTP host as local ACT tools"
version = "0.1.1"
edition = "2024"

[package.metadata.act-component.std.capabilities."wasi:http"]

[dependencies]
wit-bindgen = { version = "0.57", features = ["async-spawn"] }
wasip3 = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
ciborium = "0.2"
base64 = "0.22"
act-types = "0.4.0"
http = "1"
wasi-fetch = "0.1.3"

[lib]
crate-type = ["cdylib"]
