[package]
name = "act-http-bridge"
description = "Proxies a remote ACT-HTTP host as local ACT tools"
version = "0.1.4"
edition = "2024"

[package.metadata.act.std.capabilities."wasi:http"]
description = "Proxies a remote ACT-HTTP host; forwards all tool calls over HTTP to the configured endpoint."

[[package.metadata.act.std.capabilities."wasi:http".allow]]
host = "*"

[dependencies]
wit-bindgen = { version = "0.57", features = ["async-spawn"] }
wasip3 = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
ciborium = "0.2"
base64 = "0.22"
act-types = "0.5"
http = "1"
wasi-fetch = "0.1.3"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
opt-level = "z"

[lib]
crate-type = ["cdylib"]
