[package]
name = "act-http-bridge"
description = "Proxies a remote ACT-HTTP host as local ACT tools"
version = "0.2.3"
edition = "2024"

[dependencies]
wit-bindgen = { version = "0.58", features = ["async-spawn"] }
wasip3 = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
ciborium = "0.2"
base64 = "0.22"
act-types = "0.12"
http = "1"
wasi-fetch = "0.2.0"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
opt-level = "z"
panic = "abort"

[lib]
crate-type = ["cdylib"]
